@@ -1,4 +1,4 @@
-// Copyright 2000-2021 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
+// Copyright 2000-2022 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.ide.impl;
 
 import com.intellij.CommonBundle;
@@ -22,10 +22,7 @@ import com.intellij.openapi.project.ex.ProjectManagerEx;
 import com.intellij.openapi.startup.StartupManager;
 import com.intellij.openapi.ui.MessageDialogBuilder;
 import com.intellij.openapi.ui.Messages;
-import com.intellij.openapi.util.Disposer;
-import com.intellij.openapi.util.NullableLazyValue;
-import com.intellij.openapi.util.Ref;
-import com.intellij.openapi.util.SystemInfo;
+import com.intellij.openapi.util.*;
 import com.intellij.openapi.util.io.FileUtil;
 import com.intellij.openapi.util.io.FileUtilRt;
 import com.intellij.openapi.util.text.StringUtil;
@@ -38,6 +35,7 @@ import com.intellij.platform.PlatformProjectOpenProcessor;
 import com.intellij.project.ProjectKt;
 import com.intellij.projectImport.ProjectOpenProcessor;
 import com.intellij.ui.AppIcon;
+import com.intellij.ui.ComponentUtil;
 import com.intellij.util.*;
 import com.intellij.util.io.PathKt;
 import org.jetbrains.annotations.*;
@@ -49,11 +47,11 @@ import java.io.IOException;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.List;
 import java.util.*;
 import java.util.concurrent.CompletableFuture;
+import java.util.function.Function;
 
 import static com.intellij.openapi.util.NullableLazyValue.lazyNullable;
 
@@ -64,15 +62,21 @@ public final class ProjectUtil extends ProjectUtilCore {
   public static final String PROJECTS_DIR = "projects";
   public static final String PROPERTY_PROJECT_PATH = "%s.project.path";
 
+  @ApiStatus.Internal
+  public static final Key<Boolean> FORCE_CHECK_DIRECTORY_KEY = Key.create("project.util.processor.chooser");
+
+  @ApiStatus.Internal
+  public static final Key<Function<List<? extends ProjectOpenProcessor>, ProjectOpenProcessor>> PROCESSOR_CHOOSER_KEY =
+    Key.create("project.util.processor.chooser");
+
   private static String ourProjectsPath;
 
   private ProjectUtil() { }
 
   /** @deprecated Use {@link #updateLastProjectLocation(Path)} */
-  @Deprecated
-  @ApiStatus.ScheduledForRemoval(inVersion = "2021.3")
+  @Deprecated(forRemoval = true)
   public static void updateLastProjectLocation(@NotNull String projectFilePath) {
-    updateLastProjectLocation(Paths.get(projectFilePath));
+    updateLastProjectLocation(Path.of(projectFilePath));
   }
 
   public static void updateLastProjectLocation(@NotNull Path lastProjectLocation) {
@@ -103,14 +107,14 @@ public final class ProjectUtil extends ProjectUtilCore {
     RecentProjectsManager.getInstance().setLastProjectCreationLocation(PathUtil.toSystemIndependentName(path));
   }
 
-  /** @deprecated Use {@link ProjectManagerEx#closeAndDispose(Project)} */
+  /** @deprecated Use {@link ProjectManager#closeAndDispose(Project)} */
   @Deprecated
   public static boolean closeAndDispose(@NotNull Project project) {
-    return ProjectManagerEx.getInstanceEx().closeAndDispose(project);
+    return ProjectManager.getInstance().closeAndDispose(project);
   }
 
   public static Project openOrImport(@NotNull Path path, Project projectToClose, boolean forceOpenInNewFrame) {
-    return openOrImport(path, OpenProjectTask.withProjectToClose(projectToClose, forceOpenInNewFrame));
+    return openOrImport(path, OpenProjectTask.build().withProjectToClose(projectToClose).withForceOpenInNewFrame(forceOpenInNewFrame));
   }
 
   public static Project openOrImport(@NotNull Path path) {
@@ -126,7 +130,7 @@ public final class ProjectUtil extends ProjectUtilCore {
    * null otherwise
    */
   public static @Nullable Project openOrImport(@NotNull String path, @Nullable Project projectToClose, boolean forceOpenInNewFrame) {
-    return openOrImport(Paths.get(path), OpenProjectTask.withProjectToClose(projectToClose, forceOpenInNewFrame));
+    return openOrImport(Path.of(path), OpenProjectTask.build().withProjectToClose(projectToClose).withForceOpenInNewFrame(forceOpenInNewFrame));
   }
 
   public static @Nullable Project openOrImport(@NotNull Path file, @NotNull OpenProjectTask options) {
@@ -175,12 +179,12 @@ public final class ProjectUtil extends ProjectUtilCore {
       return openResult(project, OpenResult.failure());
     }
 
-    if (options.checkDirectoryForFileBasedProjects && Files.isDirectory(file)) {
+    if (FORCE_CHECK_DIRECTORY_KEY.get(options) == Boolean.TRUE && Files.isDirectory(file)) {
       try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(file)) {
         for (Path child : directoryStream) {
           String childPath = child.toString();
           if (childPath.endsWith(ProjectFileType.DOT_DEFAULT_EXTENSION)) {
-            Project project = openProject(Paths.get(childPath), options);
+            Project project = openProject(Path.of(childPath), options);
             return openResult(project, OpenResult.failure());
           }
         }
@@ -195,7 +199,7 @@ public final class ProjectUtil extends ProjectUtilCore {
 
     Project project;
     if (processors.size() == 1 && processors.get(0) instanceof PlatformProjectOpenProcessor) {
-      project = ProjectManagerEx.getInstanceEx().openProject(file, options.asNewProjectAndRunConfigurators().withBeforeOpenCallback(p -> {
+      project = ProjectManagerEx.getInstanceEx().openProject(file, options.asNewProject().withRunConfigurators().withBeforeOpenCallback(p -> {
         p.putUserData(PlatformProjectOpenProcessor.PROJECT_OPENED_BY_PLATFORM_PROCESSOR, Boolean.TRUE);
         return true;
       }));
@@ -252,12 +256,12 @@ public final class ProjectUtil extends ProjectUtilCore {
       return ProjectManagerEx.getInstanceEx().openProjectAsync(file, options.withRunConfigurators());
     }
 
-    if (options.checkDirectoryForFileBasedProjects && Files.isDirectory(file)) {
+    if (FORCE_CHECK_DIRECTORY_KEY.get(options) == Boolean.TRUE && Files.isDirectory(file)) {
       try (DirectoryStream<Path> directoryStream = Files.newDirectoryStream(file)) {
         for (Path child : directoryStream) {
           String childPath = child.toString();
           if (childPath.endsWith(ProjectFileType.DOT_DEFAULT_EXTENSION)) {
-            return CompletableFuture.completedFuture(openProject(Paths.get(childPath), options));
+            return CompletableFuture.completedFuture(openProject(Path.of(childPath), options));
           }
         }
       }
@@ -271,7 +275,7 @@ public final class ProjectUtil extends ProjectUtilCore {
 
     CompletableFuture<Project> projectFuture;
     if (processors.size() == 1 && processors.get(0) instanceof PlatformProjectOpenProcessor) {
-      projectFuture = ProjectManagerEx.getInstanceEx().openProjectAsync(file, options.asNewProjectAndRunConfigurators().withBeforeOpenCallback(p -> {
+      projectFuture = ProjectManagerEx.getInstanceEx().openProjectAsync(file, options.asNewProject().withRunConfigurators().withBeforeOpenCallback(p -> {
         p.putUserData(PlatformProjectOpenProcessor.PROJECT_OPENED_BY_PLATFORM_PROCESSOR, Boolean.TRUE);
         return true;
       }));
@@ -331,12 +335,13 @@ public final class ProjectUtil extends ProjectUtilCore {
     }
     else {
       processors.removeIf(it -> it instanceof PlatformProjectOpenProcessor);
+      Function<List<? extends ProjectOpenProcessor>, ProjectOpenProcessor> chooser;
       if (processors.size() == 1) {
         processor = processors.get(0);
       }
-      else if (options.getOpenProcessorChooser() != null) {
+      else if ((chooser = PROCESSOR_CHOOSER_KEY.get(options)) != null) {
         LOG.info("options.openProcessorChooser will handle the open processor dilemma");
-        processor = options.getOpenProcessorChooser().invoke(processors);
+        processor = chooser.apply(processors);
       }
       else {
         Ref<ProjectOpenProcessor> ref = new Ref<>();
@@ -366,12 +371,13 @@ public final class ProjectUtil extends ProjectUtilCore {
     }
     else {
       processors.removeIf(it -> it instanceof PlatformProjectOpenProcessor);
+      Function<List<? extends ProjectOpenProcessor>, ProjectOpenProcessor> chooser;
       if (processors.size() == 1) {
         processorFuture = CompletableFuture.completedFuture(processors.get(0));
       }
-      else if (options.getOpenProcessorChooser() != null) {
+      else if ((chooser = PROCESSOR_CHOOSER_KEY.get(options)) != null) {
         LOG.info("options.openProcessorChooser will handle the open processor dilemma");
-        processorFuture = CompletableFuture.completedFuture(options.getOpenProcessorChooser().invoke(processors));
+        processorFuture = CompletableFuture.completedFuture(chooser.apply(processors));
       }
       else {
         processorFuture = CompletableFuture.supplyAsync(() -> {
@@ -398,7 +404,7 @@ public final class ProjectUtil extends ProjectUtilCore {
   }
 
   public static @Nullable Project openProject(@NotNull String path, @Nullable Project projectToClose, boolean forceOpenInNewFrame) {
-    return openProject(Paths.get(path), OpenProjectTask.withProjectToClose(projectToClose, forceOpenInNewFrame));
+    return openProject(Path.of(path), OpenProjectTask.build().withProjectToClose(projectToClose).withForceOpenInNewFrame(forceOpenInNewFrame));
   }
 
   public static @Nullable Project openProject(@NotNull Path file, @NotNull OpenProjectTask options) {
@@ -415,12 +421,6 @@ public final class ProjectUtil extends ProjectUtilCore {
 
     if (isRemotePath(file.toString()) && !RecentProjectsManager.getInstance().hasPath(FileUtil.toSystemIndependentName(file.toString()))) {
       if (!confirmLoadingFromRemotePath(file.toString(), "warning.load.project.from.share", "title.load.project.from.share")) {
-        return null;
-      }
-    }
-
-    if (options.getUntrusted()) {
-      if (!confirmLoadingFromRemotePath(file.toString(), "warning.open.file.from.untrusted.source", "title.open.file.from.untrusted.source")) {
         return null;
       }
     }
@@ -473,7 +473,7 @@ public final class ProjectUtil extends ProjectUtilCore {
     return path.contains("://") || path.contains("\\\\");
   }
 
-  public static @Nullable Project findAndFocusExistingProjectForPath(@NotNull Path file) {
+  public static @Nullable Project findProject(@NotNull Path file) {
     Project[] openProjects = getOpenProjects();
     if (openProjects.length == 0) {
       return null;
@@ -481,11 +481,18 @@ public final class ProjectUtil extends ProjectUtilCore {
 
     for (Project project : openProjects) {
       if (isSameProject(file, project)) {
-        focusProjectWindow(project, false);
         return project;
       }
     }
     return null;
+  }
+
+  public static @Nullable Project findAndFocusExistingProjectForPath(@NotNull Path file) {
+    var project = findProject(file);
+    if (project != null) {
+      focusProjectWindow(project, false);
+    }
+    return project;
   }
 
   /**
@@ -576,7 +583,7 @@ public final class ProjectUtil extends ProjectUtilCore {
   /** @deprecated Use {@link #isSameProject(Path, Project)} */
   @Deprecated
   public static boolean isSameProject(@Nullable String projectFilePath, @NotNull Project project) {
-    return projectFilePath != null && isSameProject(Paths.get(projectFilePath), project);
+    return projectFilePath != null && isSameProject(Path.of(projectFilePath), project);
   }
 
   public static boolean isSameProject(@NotNull Path projectFile, @NotNull Project project) {
@@ -671,7 +678,7 @@ public final class ProjectUtil extends ProjectUtilCore {
     return getUserHomeProjectDir();
   }
 
-  private static String getUserHomeProjectDir() {
+  public static String getUserHomeProjectDir() {
     String productName;
     if (PlatformUtils.isCLion() || PlatformUtils.isAppCode() || PlatformUtils.isDataGrip()) {
       productName = ApplicationNamesInfo.getInstance().getProductName();
@@ -685,7 +692,8 @@ public final class ProjectUtil extends ProjectUtilCore {
   public static @Nullable Project tryOpenFiles(@Nullable Project project, @NotNull List<? extends Path> list, String location) {
     try {
       for (Path file : list) {
-        OpenResult openResult = tryOpenOrImport(file.toAbsolutePath(), OpenProjectTask.withProjectToClose(project, true));
+        OpenProjectTask options = OpenProjectTask.build().withProjectToClose(project).withForceOpenInNewFrame(true);
+        OpenResult openResult = tryOpenOrImport(file.toAbsolutePath(), options);
         if (openResult instanceof OpenResult.Success) {
           LOG.debug(location + ": load project from ", file);
           return ((OpenResult.Success)openResult).getProject();
@@ -755,20 +763,30 @@ public final class ProjectUtil extends ProjectUtilCore {
   }
 
   public static @NotNull Path getProjectPath(@NotNull String name) {
-    return Paths.get(getProjectsPath(), name);
+    return Path.of(getProjectsPath(), name);
   }
 
   public static @Nullable Path getProjectFile(@NotNull String name) {
     Path projectDir = getProjectPath(name);
-    return Files.isDirectory(projectDir.resolve(Project.DIRECTORY_STORE_FOLDER)) ? projectDir : null;
+    return isProjectFile(projectDir) ? projectDir : null;
+  }
+
+  private static boolean isProjectFile(@NotNull Path projectDir) {
+    return Files.isDirectory(projectDir.resolve(Project.DIRECTORY_STORE_FOLDER));
   }
 
   public static @Nullable Project openOrCreateProject(@NotNull String name) {
     return openOrCreateProject(name, null);
   }
 
-  public static @Nullable Project openOrCreateProject(@NotNull String name, @Nullable ProjectCreatedCallback  projectCreatedCallback) {
-    return ProgressManager.getInstance().computeInNonCancelableSection(() -> openOrCreateProjectInner(name, projectCreatedCallback));
+  public static @Nullable Project openOrCreateProject(@NotNull String name, @Nullable ProjectCreatedCallback projectCreatedCallback) {
+    return openOrCreateProject(name, getProjectPath(name), projectCreatedCallback);
+  }
+
+  public static @Nullable Project openOrCreateProject(@NotNull String name, @NotNull Path file, @Nullable ProjectCreatedCallback projectCreatedCallback) {
+    return ProgressManager.getInstance().computeInNonCancelableSection(() -> {
+      return openOrCreateProjectInner(name, file, projectCreatedCallback);
+    });
   }
 
   public interface ProjectCreatedCallback {
@@ -787,7 +805,13 @@ public final class ProjectUtil extends ProjectUtilCore {
   }
 
   private static @Nullable Project openOrCreateProjectInner(@NotNull String name, @Nullable ProjectCreatedCallback projectCreatedCallback) {
-    Path existingFile = getProjectFile(name);
+    Path file = getProjectPath(name);
+    return openOrCreateProjectInner(name, file, projectCreatedCallback);
+  }
+
+  @Nullable
+  private static Project openOrCreateProjectInner(@NotNull String name, @NotNull Path file, @Nullable ProjectCreatedCallback projectCreatedCallback) {
+    Path existingFile = isProjectFile(file) ? file : null;
     if (existingFile != null) {
       Project[] openProjects = ProjectManager.getInstance().getOpenProjects();
       for (Project p : openProjects) {
@@ -799,7 +823,6 @@ public final class ProjectUtil extends ProjectUtilCore {
       return ProjectManagerEx.getInstanceEx().openProject(existingFile, new OpenProjectTask().withRunConfigurators());
     }
 
-    Path file = getProjectPath(name);
     boolean created;
     try {
       created = (!Files.exists(file) && Files.createDirectories(file) != null) || Files.isDirectory(file);
@@ -810,19 +833,20 @@ public final class ProjectUtil extends ProjectUtilCore {
 
     Path projectFile = null;
     if (created) {
-      Project project = ProjectManagerEx.getInstanceEx().newProject(file, OpenProjectTask.newProject(true).withProjectName(name));
+      OpenProjectTask options = OpenProjectTask.build().asNewProject().withRunConfigurators().withProjectName(name);
+      Project project = ProjectManagerEx.getInstanceEx().newProject(file, options);
       if (project != null) {
         if (projectCreatedCallback != null) {
           projectCreatedCallback.projectCreated(project);
         }
         saveAndDisposeProject(project);
-        projectFile = getProjectFile(name);
+        projectFile = file;
       }
     }
-    if (projectFile == null) {
-      return null;
-    }
-    return ProjectManagerEx.getInstanceEx().openProject(projectFile, OpenProjectTask.fromWizardAndRunConfigurators());
+    if (projectFile == null) return null;
+
+    OpenProjectTask options = OpenProjectTask.build().withRunConfigurators().withCreatedByWizard().withoutVfsRefresh();
+    return ProjectManagerEx.getInstanceEx().openProject(projectFile, options);
   }
 
   private static void saveAndDisposeProject(@NotNull Project project) {
@@ -830,5 +854,21 @@ public final class ProjectUtil extends ProjectUtilCore {
     ApplicationManager.getApplication().invokeAndWait(() -> {
       WriteAction.run(() -> Disposer.dispose(project));
     });
+  }
+
+  public static @Nullable Project getProjectForWindow(@Nullable Window window) {
+    if (window != null) {
+      while (window.getOwner() != null) {
+        window = window.getOwner();
+      }
+      if (window instanceof IdeFrame) {
+        return ((IdeFrame)window).getProject();
+      }
+    }
+    return null;
+  }
+
+  public static @Nullable Project getProjectForComponent(@Nullable Component component) {
+    return getProjectForWindow(ComponentUtil.getWindow(component));
   }
 }
